[project]
name = "llmmerge"
version = "0.2.0"
description = "A custom LLM-based git merge driver."
authors = [
    { name = "Abhishek Agarwal", email = "ultimateabhi@gmail.com" }
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"